--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
         <ul>
           <li>
             <a href="./portfolio.html">
-              <img src="./images/технокряк.jpg" alt="технокряк" width="370" height="294" />
+              <img src="./images/tehno.jpg" alt="технокряк" width="370" height="294" />
             </a>
             <h3>Технокряк</h3>
             <p>Веб-сайт</p>
@@ -53,7 +53,7 @@
           <li>
             <a href="./portfolio.html">
               <img
-                src="./images/Постер New Orlean vs Golden Star.jpg"
+                src="./images/New-Orlean.jpg"
                 alt="Постер New Orlean vs Golden Star"
                 width="370"
                 height="294"
@@ -64,25 +64,21 @@
           </li>
           <li>
             <a href="./portfolio.html">
-              <img
-                src="./images/Ресторан Seafood.jpg"
-                alt="Ресторан Seafood"
-                width="370"
-                height="294"
+              <img src="./images/Seafood.jpg" alt="Ресторан Seafood" width="370" height="294"
             /></a>
             <h3>Ресторан Seafood</h3>
             <p>Приложение</p>
           </li>
           <li>
             <a href="./portfolio.html">
-              <img src="./images/Проект Prime.jpg" alt="Проект Prime" width="370" height="294" />
+              <img src="./images/Prime.jpg" alt="Проект Prime" width="370" height="294" />
             </a>
             <h3>Проект Prime</h3>
             <p>Маркетинг</p>
           </li>
           <li>
             <a href="./portfolio.html">
-              <img src="./images/Проект Boxes.jpg" alt="Проект Boxes" width="370" height="294" />
+              <img src="./images/Boxes.jpg" alt="Проект Boxes" width="370" height="294" />
             </a>
             <h3>Проект Boxes</h3>
             <p>Приложение</p>
@@ -90,7 +86,7 @@
           <li>
             <a href="./portfolio.html">
               <img
-                src="./images/Inspiration has no Borders.jpg"
+                src="./images/Inspiration.jpg"
                 alt="Inspiration has no Borders"
                 width="370"
                 height="294"
@@ -102,7 +98,7 @@
           <li>
             <a href="./portfolio.html">
               <img
-                src="./images/Издание Limited Edition.jpg"
+                src="./images/Limited-Edition.jpg"
                 alt="Издание Limited Edition"
                 width="370"
                 height="294"
@@ -113,7 +109,7 @@
           </li>
           <li>
             <a href="./portfolio.html"
-              ><img src="./images/Проект LAB.jpg" alt="Проект LAB" width="370" height="294"
+              ><img src="./images/LAB.jpg" alt="Проект LAB" width="370" height="294"
             /></a>
             <h3>Проект LAB</h3>
             <p>Маркетинг</p>
@@ -121,7 +117,7 @@
           <li>
             <a href="./portfolio.html"
               ><img
-                src="./images/Growing Business.jpg"
+                src="./images/Growing-Business.jpg"
                 alt="Growing Business"
                 width="370"
                 height="294"
