--- a/portfolio.html
+++ b/portfolio.html
@@ -4,54 +4,57 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <title>Document</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Шапка сайта-->
     <header>
       <nav>
-        <a href=""><span>Web</span>Studio</a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="" class="logo link">Web<span class="textlogo-black logo">Studio</span> </a>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="nav-link link">Студия</a></li>
+          <li><a href="./portfolio.html" class="nav-link link current">Портфолио</a></li>
+          <li><a href="" class="nav-link link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="list">
+        <li>
+          <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li><a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section>
-        <!--скрыть h1 h2-->
-        <h1>Наше портфолио</h1>
-        <h2>Фильтры</h2>
-        <ul>
-          <li><a href="./portfolio.html">Все</a></li>
-          <li><a href="./portfolio.html">Веб-сайты</a></li>
-          <li><a href="./portfolio.html">Приложения</a></li>
-          <li><a href="./portfolio.html">Дизайн</a></li>
-          <li><a href="./portfolio.html">Маркетинг</a></li>
+      <!-- WORK -->
+      <section class="work">
+        <h1 class="visually-hidden">Наше портфолио</h1>
+        <h2 class="visually-hidden">Фильтры</h2>
+        <ul class="filter-list list">
+          <li><button type="button" class="filter-btn">Все</button></li>
+          <li><button type="button" class="filter-btn">Веб-сайты</button></li>
+          <li><button type="button" class="filter-btn">Приложения</button></li>
+          <li><button type="button" class="filter-btn">Дизайн</button></li>
+          <li><button type="button" class="filter-btn">Маркетинг</button></li>
         </ul>
-        <h2>Меню</h2>
-        <ul>
-          <li>
-            <a href="./portfolio.html">
+        <h2 class="visually-hidden">Меню</h2>
+        <ul class="work-list list">
+          <li class="work-item">
+            <a class="work-link" href="./portfolio.html">
               <img src="./images/tehno.jpg" alt="технокряк" width="370" height="294" />
             </a>
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <h3 class="work-pre-title">Технокряк</h3>
+            <p class="work-text">Веб-сайт</p>
           </li>
-          <li>
-            <a href="./portfolio.html">
+          <li class="work-item">
+            <a class="work-link" href="./portfolio.html">
               <img
                 src="./images/New-Orlean.jpg"
                 alt="Постер New Orlean vs Golden Star"
@@ -59,32 +62,32 @@
                 height="294"
               />
             </a>
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <h3 class="work-pre-title">Постер New Orlean vs Golden Star</h3>
+            <p class="work-text">Дизайн</p>
           </li>
-          <li>
-            <a href="./portfolio.html">
+          <li class="work-item">
+            <a class="work-link" href="./portfolio.html">
               <img src="./images/Seafood.jpg" alt="Ресторан Seafood" width="370" height="294"
             /></a>
-            <h3>Ресторан Seafood</h3>
-            <p>Приложение</p>
+            <h3 class="work-pre-title">Ресторан Seafood</h3>
+            <p class="work-text">Приложение</p>
           </li>
-          <li>
-            <a href="./portfolio.html">
+          <li class="work-item">
+            <a class="work-link" href="./portfolio.html">
               <img src="./images/Prime.jpg" alt="Проект Prime" width="370" height="294" />
             </a>
-            <h3>Проект Prime</h3>
-            <p>Маркетинг</p>
+            <h3 class="work-pre-title">Проект Prime</h3>
+            <p class="work-text">Маркетинг</p>
           </li>
-          <li>
-            <a href="./portfolio.html">
+          <li class="work-item">
+            <a class="work-link" href="./portfolio.html">
               <img src="./images/Boxes.jpg" alt="Проект Boxes" width="370" height="294" />
             </a>
-            <h3>Проект Boxes</h3>
-            <p>Приложение</p>
+            <h3 class="work-pre-title">Проект Boxes</h3>
+            <p class="work-text">Приложение</p>
           </li>
-          <li>
-            <a href="./portfolio.html">
+          <li class="work-item">
+            <a class="work-link" href="./portfolio.html">
               <img
                 src="./images/Inspiration.jpg"
                 alt="Inspiration has no Borders"
@@ -92,11 +95,11 @@
                 height="294"
               />
             </a>
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <h3 class="work-pre-title">Inspiration has no Borders</h3>
+            <p class="work-text">Веб-сайт</p>
           </li>
-          <li>
-            <a href="./portfolio.html">
+          <li class="work-item">
+            <a class="work-link" href="./portfolio.html">
               <img
                 src="./images/Limited-Edition.jpg"
                 alt="Издание Limited Edition"
@@ -104,38 +107,44 @@
                 height="294"
               />
             </a>
-            <h3>Издание Limited Edition</h3>
-            <p>Дизайн</p>
+            <h3 class="work-pre-title">Издание Limited Edition</h3>
+            <p class="work-text">Дизайн</p>
           </li>
-          <li>
-            <a href="./portfolio.html"
+          <li class="work-item">
+            <a class="work-link" href="./portfolio.html"
               ><img src="./images/LAB.jpg" alt="Проект LAB" width="370" height="294"
             /></a>
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
+            <h3 class="work-pre-title">Проект LAB</h3>
+            <p class="work-text">Маркетинг</p>
           </li>
-          <li>
-            <a href="./portfolio.html"
+          <li class="work-item">
+            <a class="work-link" href="./portfolio.html"
               ><img
                 src="./images/Growing-Business.jpg"
                 alt="Growing Business"
                 width="370"
                 height="294"
             /></a>
-            <h3>Growing Business</h3>
-            <p>Приложение</p>
+            <h3 class="work-pre-title">Growing Business</h3>
+            <p class="work-text">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Футер-->
-    <footer>
-      <a href=""><span>Web</span>Studio</a>
+    <footer class="footer">
+      <a href="" class="logo link">Web<span class="textlogo-white logo">Studio</span></a>
       <address>
-        <ul>
-          <li><a href="/">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="footer-list list">
+          <li>
+            <a class="link" href="https://goo.gl/maps/HgSEHA6W2RSiuSY3A"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li>
+            <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li><a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
