. Фото зробіть у форматі jpeg, а не svg - https://i.imgur.com/eIcqJq5.png 2. Для лого приберіть ховер 3. Для посилання фактичної адреси в футері додайте ховер 4. Закриваючий тег посилання перенесіть - https://i.imgur.com/BtHs9RC.png

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,86 +47,88 @@
         <h2 class="visually-hidden">Меню</h2>
         <ul class="work-list list">
           <li class="work-item">
-            <a class="work-link" href="./portfolio.html">
+            <a class="work-link link" href="./portfolio.html">
               <img src="./images/tehno.jpg" alt="технокряк" width="370" height="294" />
+              <h3 class="work-pre-title">Технокряк</h3>
+              <p class="work-text">Веб-сайт</p>
             </a>
-            <h3 class="work-pre-title">Технокряк</h3>
-            <p class="work-text">Веб-сайт</p>
           </li>
           <li class="work-item">
-            <a class="work-link" href="./portfolio.html">
+            <a class="work-link link" href="./portfolio.html">
               <img
                 src="./images/New-Orlean.jpg"
                 alt="Постер New Orlean vs Golden Star"
                 width="370"
                 height="294"
               />
+              <h3 class="work-pre-title">Постер New Orlean vs Golden Star</h3>
+              <p class="work-text">Дизайн</p>
             </a>
-            <h3 class="work-pre-title">Постер New Orlean vs Golden Star</h3>
-            <p class="work-text">Дизайн</p>
           </li>
           <li class="work-item">
-            <a class="work-link" href="./portfolio.html">
-              <img src="./images/Seafood.jpg" alt="Ресторан Seafood" width="370" height="294"
-            /></a>
-            <h3 class="work-pre-title">Ресторан Seafood</h3>
-            <p class="work-text">Приложение</p>
+            <a class="work-link link" href="./portfolio.html">
+              <img src="./images/Seafood.jpg" alt="Ресторан Seafood" width="370" height="294" />
+              <h3 class="work-pre-title">Ресторан Seafood</h3>
+              <p class="work-text">Приложение</p>
+            </a>
           </li>
           <li class="work-item">
-            <a class="work-link" href="./portfolio.html">
+            <a class="work-link link" href="./portfolio.html">
               <img src="./images/Prime.jpg" alt="Проект Prime" width="370" height="294" />
+              <h3 class="work-pre-title">Проект Prime</h3>
+              <p class="work-text">Маркетинг</p>
             </a>
-            <h3 class="work-pre-title">Проект Prime</h3>
-            <p class="work-text">Маркетинг</p>
           </li>
           <li class="work-item">
-            <a class="work-link" href="./portfolio.html">
+            <a class="work-link link" href="./portfolio.html">
               <img src="./images/Boxes.jpg" alt="Проект Boxes" width="370" height="294" />
+              <h3 class="work-pre-title">Проект Boxes</h3>
+              <p class="work-text">Приложение</p>
             </a>
-            <h3 class="work-pre-title">Проект Boxes</h3>
-            <p class="work-text">Приложение</p>
           </li>
           <li class="work-item">
-            <a class="work-link" href="./portfolio.html">
+            <a class="work-link link" href="./portfolio.html">
               <img
                 src="./images/Inspiration.jpg"
                 alt="Inspiration has no Borders"
                 width="370"
                 height="294"
               />
+
+              <h3 class="work-pre-title">Inspiration has no Borders</h3>
+              <p class="work-text">Веб-сайт</p>
             </a>
-            <h3 class="work-pre-title">Inspiration has no Borders</h3>
-            <p class="work-text">Веб-сайт</p>
           </li>
           <li class="work-item">
-            <a class="work-link" href="./portfolio.html">
+            <a class="work-link link" href="./portfolio.html">
               <img
                 src="./images/Limited-Edition.jpg"
                 alt="Издание Limited Edition"
                 width="370"
                 height="294"
               />
+              <h3 class="work-pre-title">Издание Limited Edition</h3>
+              <p class="work-text">Дизайн</p>
             </a>
-            <h3 class="work-pre-title">Издание Limited Edition</h3>
-            <p class="work-text">Дизайн</p>
           </li>
           <li class="work-item">
-            <a class="work-link" href="./portfolio.html"
-              ><img src="./images/LAB.jpg" alt="Проект LAB" width="370" height="294"
-            /></a>
-            <h3 class="work-pre-title">Проект LAB</h3>
-            <p class="work-text">Маркетинг</p>
+            <a class="work-link link" href="./portfolio.html"
+              ><img src="./images/LAB.jpg" alt="Проект LAB" width="370" height="294" />
+              <h3 class="work-pre-title">Проект LAB</h3>
+              <p class="work-text">Маркетинг</p></a
+            >
           </li>
           <li class="work-item">
-            <a class="work-link" href="./portfolio.html"
+            <a class="work-link link" href="./portfolio.html"
               ><img
                 src="./images/Growing-Business.jpg"
                 alt="Growing Business"
                 width="370"
                 height="294"
-            /></a>
-            <h3 class="work-pre-title">Growing Business</h3>
-            <p class="work-text">Приложение</p>
+              />
+              <h3 class="work-pre-title">Growing Business</h3>
+              <p class="work-text">Приложение</p></a
+            >
           </li>
         </ul>
       </section>
@@ -137,7 +139,7 @@
       <address>
         <ul class="footer-list list">
           <li>
-            <a class="link" href="https://goo.gl/maps/HgSEHA6W2RSiuSY3A"
+            <a class="link link-adress" href="https://goo.gl/maps/HgSEHA6W2RSiuSY3A"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
