--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-         <link
+    <title>Document</title>
+    <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
@@ -18,13 +18,15 @@
         <a href="" class="logo link">Web<span class="textlogo-black logo">Studio</span> </a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="nav-link current link">Студия</a></li>
-          <li><a href="./portfolio.html"class="nav-link link">Портфолио</a></li>
+          <li><a href="./portfolio.html" class="nav-link link">Портфолио</a></li>
           <li><a href="" class="nav-link link">Контакты</a></li>
         </ul>
       </nav>
       <ul class="list">
-        <li><a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contacts-link link" href="tel:+380961111111" >+38 096 111 11 11</a></li>
+        <li>
+          <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li><a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -59,16 +61,16 @@
           </li>
         </ul>
         <h3 class="subtitle-about">Чем мы занимаемся</h3>
-                <h2 class="visually-hidden">Преимущества компании</h2>
+        <h2 class="visually-hidden">Преимущества компании</h2>
         <ul class="list">
           <li>
-            <img src="./images/pc1.svg" alt="картинка1" width="370" height="294"/>
+            <img src="./images/pc1.jpg" alt="картинка1" width="370" height="294" />
           </li>
           <li>
-            <img src="./images/pc2.svg" alt="картинка2" width="370" height="294"/>
+            <img src="./images/pc2.jpg" alt="картинка2" width="370" height="294" />
           </li>
           <li>
-            <img src="./images/pc3.svg" alt="картинка3" width="370" height="294"/>
+            <img src="./images/pc3.jpg" alt="картинка3" width="370" height="294" />
           </li>
         </ul>
       </section>
@@ -77,22 +79,22 @@
         <h3 class="team-title">Наша команда</h3>
         <ul class="list">
           <li>
-            <img src="./images/Igor.svg" alt="Игорь Демьяненко" width="270" />
+            <img src="./images/Igor.jpg" alt="Игорь Демьяненко" width="270" />
             <h4 class="name">Игорь Демьяненко</h4>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/Olga.svg" alt="Ольга Репина" width="270" />
+            <img src="./images/Olga.jpg" alt="Ольга Репина" width="270" />
             <h4 class="name">Ольга Репина</h4>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/Nikolay.svg" alt="Николай Тарасов" width="270" />
+            <img src="./images/Nikolay.jpg" alt="Николай Тарасов" width="270" />
             <h4 class="name">Николай Тарасов</h4>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/Misha.svg" alt="Михаил Ермаков" width="270" />
+            <img src="./images/Misha.jpg" alt="Михаил Ермаков" width="270" />
             <h4 class="name">Михаил Ермаков</h4>
             <p>UI Designer</p>
           </li>
@@ -104,8 +106,13 @@
       <a href="" class="logo link">Web<span class="textlogo-white logo">Studio</span></a>
       <address>
         <ul class="footer-list list">
-          <li><a class="link-adress" href="https://goo.gl/maps/HgSEHA6W2RSiuSY3A">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li>
+            <a class="link-adress link" href="https://goo.gl/maps/HgSEHA6W2RSiuSY3A">г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li>
+            <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
           <li><a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
